--- a/terminus_types/Cargo.toml
+++ b/terminus_types/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base64 = "0.13.0"
+blake3 = "1.0.0"
+serde = { version = "1.0.126", features = ["derive"] }
