--- a/terminus_types/Cargo.toml
+++ b/terminus_types/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 blake3 = "1.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 serde = { version = "1.0.126", features = ["derive"] }
+thiserror = "1.0.26"
