--- a/terminus-server/Cargo.toml
+++ b/terminus-server/Cargo.toml
@@ -8,9 +8,13 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.42"
 bincode = "1.3.3"
+chrono = "0.4.19"
 log = "0.4.14"
 log-panics = "2.0.0"
+once_cell = "1.8.0"
 serde = { version = "1.0.126", features = ["derive"] }
 simplelog = "0.10.0"
 sled = "0.34.6"
-tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util"] }
+terminus_types = { path = "../terminus_types" }
+thiserror = "1.0.26"
+tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util", "time"] }
