--- a/terminus_types/Cargo.toml
+++ b/terminus_types/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 base64 = "0.13.0"
+bincode = "1.3.3"
 blake3 = "1.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 serde = { version = "1.0.126", features = ["derive"] }
