--- a/kanban/Cargo.toml
+++ b/kanban/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0.127", features = ["derive"] }
 terminus_types = { path = "/home/gyara/projects/terminus/terminus_types" }
 tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util", "time"] }
 tokio-rustls = "0.22.0"
-tui = "0.15.0"
+tui = "0.16.0"
 log = "0.4.14"
 log-panics = "2.0.0"
 anyhow = "1.0.42"
@@ -24,3 +24,4 @@ termion = "1.5.6"
 crossbeam-channel = "0.5.1"
 unicode-segmentation = "1.8.0"
 unicode-width = "0.1.8"
+crossbeam-utils = "0.8.5"
