--- a/kanban/Cargo.toml
+++ b/kanban/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 bincode = "1.3.3"
 chrono = "0.4.19"
 serde = { version = "1.0.127", features = ["derive"] }
-terminus_types = { path = "/home/gyara/projects/terminus/terminus_types" }
+terminus_types = { path = "../terminus_types" }
 tokio = { version = "1.9.0", features = ["macros", "net", "rt-multi-thread", "io-util", "time"] }
 tokio-rustls = "0.22.0"
 tui = "0.16.0"
