--- a/kanban/Cargo.toml
+++ b/kanban/Cargo.toml
@@ -26,3 +26,5 @@ unicode-segmentation = "1.8.0"
 unicode-width = "0.1.8"
 crossbeam-utils = "0.8.5"
 rand = "0.8.4"
+blake3 = "1.0.0"
+dirs = "3.0.2"
