--- a/terminus-server/Cargo.toml
+++ b/terminus-server/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 anyhow = "1.0.42"
 bincode = "1.3.3"
 chrono = "0.4.19"
+crossbeam-channel = "0.5.1"
 log = "0.4.14"
 log-panics = "2.0.0"
 once_cell = "1.8.0"
